table alignment fixes

--- a/ui/scss/component/_table.scss
+++ b/ui/scss/component/_table.scss
@@ -102,7 +102,7 @@ th {
 
 .table__header-text {
   width: 100%;
-  margin: var(--spacing-m) var(--spacing-l);
+  margin: 0 var(--spacing-s);
 }
 
 .table__header-text--between {
